@@ -1,8 +1,8 @@
 + check all included files
-- rework WindowDiff
-- prevent Main Window size to change when selecting a destination
+o rework WindowDiff
+o prevent Main Window size to change when selecting a destination
 - create BeforeRelease.hpp and update Readme
-- update (c) year
++ update (c) year
 - add window and app icon
 + release singletons in the MainWindow destructor
 + use std var case
